Fix summary cart display on mobile

--- a/_dev/css/components/cart.scss
+++ b/_dev/css/components/cart.scss
@@ -28,7 +28,6 @@
   }
 
   &.cart-summary-totals {
-    padding: 0 1.25rem 0.825rem;
 
     .cart-summary-line {
       padding: 0.5rem 0.2rem 0;
